# GEN-AI-Interviewer

./: .gitignore  .pdm-python  Homepage.py  README.md  initialization.py  pyproject.toml  requirements.txt
aws/: synthesize_speech.py
pages/: Behavioral Screen.py  Professional Screen.py  Resume Screen.py
prompts/: prompt_selector.py  prompts.py
speech_recognition/: openai_whisper.py
